# kuku

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  Cargo.toml  LICENSE  README.md  README_ko.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/desktop/: .oxfmtrc.json  .oxlintrc.json  index.html  moon.yml  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
apps/desktop/src/: app.tsx  env.d.ts  index.css  index.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.preview.conf.json
apps/server/: .env.example  go.mod  go.sum  moon.yml
apps/server/test/: docker-compose.test.yml
apps/web/: .oxfmtrc.json  .oxlintrc.json  astro.config.mjs  moon.yml  package.json  prettier.config.mjs
apps/web/scripts/: check_parent_imports.mjs
apps/web/src/: content.config.ts
crates/kuku-ai/: Cargo.toml  README.md  moon.yml
crates/kuku-contract/: Cargo.toml  README.md
crates/kuku-indexer/: Cargo.toml  README.md  moon.yml
crates/kuku-search-core/: Cargo.toml
crates/tauri-plugin-ai/: Cargo.toml  build.rs
crates/tauri-plugin-ai/permissions/autogenerated/: reference.md
crates/tauri-plugin-ai/permissions/autogenerated/commands/: ai_register_proxy_tool.toml  ai_resolve_approval.toml  ai_set_config.toml
crates/tauri-plugin-ai/src/: commands.rs  error.rs  host.rs  lib.rs  mutation.rs  session.rs  state.rs  types.rs
crates/tauri-plugin-ai/src/provider/: gemini.rs  mod.rs  remote.rs
crates/tauri-plugin-ai/src/tools/: descriptor.rs  mod.rs  proxy.rs
patches/: tinykeys.patch
scripts/: release-preview.sh  release.sh
(+431 files in other folders)
