[package]
name = "tauri-plugin-ai"
version = "0.1.0"
edition = "2024"
publish = false
build = "build.rs"
links = "tauri-plugin-ai"

[lib]
name = "tauri_plugin_ai"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
async-stream = "0.3"
blake3 = "1"
dirs = "6"
futures = "0.3"
log = "0.4"
parking_lot = "0.12"
rig-core = "0.32"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
tokio-stream = "0.1"
tokio-util = "0.7"
uuid = { version = "1", features = ["serde", "v4"] }

[build-dependencies]
tauri-plugin = { version = "2.4", features = ["build"] }
